<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_principal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.ar.alumnos.Principal">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lblListado"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:textStyle="bold"
    android:textSize="20dp"
    android:id="@+id/textView"
    android:layout_marginTop="20dp" />

<ListView
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:id="@+id/Listado_Alumnos"
    android:layout_below="@+id/textView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:listitem="@android:layout/simple_list_item_1" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btnAgregar"
    android:id="@+id/btnAgregar"
    android:layout_marginStart="25dp"
    android:layout_marginTop="21dp"
    android:layout_below="@+id/Listado_Alumnos"
    android:layout_alignParentStart="true" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btnBuscar"
    android:id="@+id/btnBuscar"
    android:layout_marginEnd="11dp"
    android:layout_alignBaseline="@+id/btnAgregar"
    android:layout_alignBottom="@+id/btnAgregar"
    android:layout_alignParentEnd="true" />
</RelativeLayout>
